--- a/senluo-scraper.csproj
+++ b/senluo-scraper.csproj
@@ -30,6 +30,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Playwright" Version="1.49.0"/>
+        <PackageReference Include="Nito.AsyncEx" Version="5.1.2"/>
         <PackageReference Include="ShellProgressBar" Version="5.2.0"/>
         <PackageReference Include="System.Linq.Async" Version="6.0.1"/>
     </ItemGroup>
